fix(sonarcube): add sonar cube settings

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
-# must be unique in a given SonarQube instance. !!!!!!! ADD REPO NAME HERE !!!!!!!
-sonar.projectKey=
-# this is the name displayed in the SonarQube UI !!!!!!! ADD REPO NAME HERE !!!!!!!
-sonar.projectName=
+# must be unique in a given SonarQube instance.
+sonar.projectKey=style-skeleton-boilerplate
+# this is the name displayed in the SonarQube UI
+sonar.projectName=style-skeleton-boilerplate
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
