--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "",
+  "name": "style-skeleton-boilerplate",
   "version": "0.0.0",
-  "description": "",
+  "description": "Example style modules",
   "main": "./src/index.js",
   "scripts": {
     "start": "webpack-dashboard -- webpack-dev-server --config webpack.config.dev.js",
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://!!!!!!! ADD REPO URL HERE !!!!!!!"
+    "url": "git+https://git.roiback.com/statics/style-skeleton-boilerplate.git"
   },
   "publishConfig": {
     "registry": "http://registry.roiback.com:4873/"
@@ -31,7 +31,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "homepage": " !!!!!!! ADD PROJECTS HOMEPAGE HERE !!!!!!! ",
+  "homepage": "https://git.roiback.com/statics/style-skeleton-boilerplate",
   "engines": {
     "node": ">=6.2"
   },
@@ -60,8 +60,6 @@
     "growl": "^1.9.2",
     "ignore-styles": "^5.0.1",
     "istanbul": "1.1.0-alpha.1",
-    "less": "^2.7.1",
-    "less-loader": "^4.0.4",
     "mocha": "^2.5.3",
     "node-sass": "^4.6.0",
     "open": "0.0.5",
