--- a/package.json
+++ b/package.json
@@ -23,24 +23,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://git.roiback.com/statics/style-skeleton-boilerplate.git"
+    "url": "git+https://github.com/pableco/style-skeleton-boilerplate.git"
   },
   "publishConfig": {
-    "registry": "http://registry.roiback.com:4873/"
+    "registry": "https://registry.npmjs.org"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "homepage": "https://git.roiback.com/statics/style-skeleton-boilerplate",
+  "homepage": "https://github.com/pableco/style-skeleton-boilerplate",
   "engines": {
     "node": ">=6.2"
   },
-  "dependencies": {
-    "roi-styles-common": "^5.0.3"
-  },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
-    "babel-core": "^6.10.4",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
@@ -57,15 +54,14 @@
     "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "generate-changelog": "^1.0.2",
-    "growl": "^1.9.2",
+    "growl": "^1.10.5",
     "ignore-styles": "^5.0.1",
     "istanbul": "1.1.0-alpha.1",
-    "mocha": "^2.5.3",
-    "node-sass": "^4.6.0",
-    "open": "0.0.5",
+    "mocha": "^5.2.0",
+    "node-sass": "^4.9.3",
     "pixrem": "^3.0.2",
     "postcss-loader": "^1.0.0",
-    "postcss-smart-import": "^0.7.4",
+    "postcss-smart-import": "^0.7.6",
     "react": "^15.2.1",
     "react-addons-test-utils": "^15.2.1",
     "react-dom": "^15.2.1",
@@ -73,8 +69,9 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^1.15.0",
-    "webpack-dashboard": "^0.1.8",
-    "webpack-dev-server": "^1.16.3",
+    "webpack-cli": "^3.1.1",
+    "webpack-dashboard": "^2.0.0",
+    "webpack-dev-server": "^3.1.9",
     "webpack-visualizer-plugin": "^0.1.10"
   },
   "peerDependencies": {
