feat(update): update to webpack 4, change mocha by jest

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
-  "presets": ["es2015", "react"],
+  "presets": [
+    "react",
+    "env"
+  ],
   "plugins": [
-    "add-module-exports"
-  ]
+    "transform-runtime",
+    "transform-object-rest-spread"
+  ],
 }
