--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,10 @@
 {
   "extends": "airbnb-base",
-
   "parser": "babel-eslint",
-  
   "env": {
     "browser": true,
     "node": true
   },
-
   "globals": {
     "describe": false,
     "it": false,
@@ -15,23 +12,41 @@
     "beforeEach": false,
     "after": false
   },
-
   "plugins": [
     "react"
   ],
-
   "rules": {
     // Override any settings from the "parent" configuration
     "no-console": "off",
-    "max-len": ["error", 120],
+    "max-len": [
+      "error",
+      120
+    ],
     "padded-blocks": "off",
-    "no-use-before-define": ["error", "nofunc"],
-    "comma-dangle": ["error", "never"],
+    "no-use-before-define": [
+      "error",
+      "nofunc"
+    ],
     // Code quality
-    "complexity": ["error", 5],
-    "max-params": ["error", 3],
-    "max-statements": ["error", 10],
-    "indent": ["error", 4],
+    "complexity": [
+      "error",
+      5
+    ],
+    "max-params": [
+      "error",
+      3
+    ],
+    "max-statements": [
+      "error",
+      10
+    ],
+    "indent": [
+      "error",
+      4
+    ],
+    "class-methods-use-this": [
+      "off"
+    ],
     "react/jsx-uses-react": 2, // Prevent React to be incorrectly marked as unused
     "react/jsx-uses-vars": 2 // Prevent variables used in JSX to be incorrectly marked as unused
   }
