--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "description": "Example style modules",
   "main": "./src/index.js",
   "scripts": {
-    "start": "webpack-dashboard -- webpack-dev-server --config webpack.config.dev.js",
-    "test:watch": "mocha -r test/registerBabel.js -r ignore-styles --watch --recursive --growl",
-    "test": "istanbul cover --report text --report lcov _mocha -- -r test/registerBabel.js -r ignore-styles --recursive --growl",
+    "start": "webpack-dashboard -- webpack-dev-server --open --config webpack.dev.js",
+    "dist": "webpack --config webpack.prod.js",
+    "test:ci": "NODE_ENV=test jest test",
+    "test": "NODE_ENV=test jest test --notify --watch",
+    "cleancoverage": "rm -rf coverage",
+    "prerelease": "npm ci && npm run lint && npm run cleancoverage && npm run check-master && npm run test:ci",
     "clean": "rm -rf dist && mkdir dist",
     "predist": "npm run clean",
-    "dist": "webpack --config webpack.config.dist.js",
     "lint": "eslint .",
-    "check-coverage": "istanbul check-coverage --statements 50 --branches 50 --functions 70",
-    "prepublish": "npm run dist",
     "check-master": "git symbolic-ref --short HEAD | grep ^master$ > /dev/null || (echo \"Not in 'master' branch. Aborting release\"; return 1)",
-    "prerelease": "npm run lint && npm run check-master && npm run test && npm run check-coverage",
-    "release:patch": "npm run prerelease && changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version patch && git push --follow-tags",
-    "release:minor": "npm run prerelease && changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version minor && git push --follow-tags",
-    "release:major": "npm run prerelease && changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version major && git push --follow-tags",
+    "release:patch": "npm run prerelease && changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version patch",
+    "release:minor": "npm run prerelease && changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version minor",
+    "release:major": "npm run prerelease && changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version major",
+    "prepare": "npm run dist",
     "postversion": "git push --follow-tags",
+    "deploy": "webpack --config webpack.deploy.js && surge ./deploy/builds/ [nombre componente eg:'roi-tabs'].surge.sh",
     "style-lint": "node_modules/sass-lint/bin/sass-lint.js --config .scss-lint.yml '**/*.scss' --verbose --no-exit"
   },
   "repository": {
@@ -36,46 +37,60 @@
     "node": ">=6.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^4.3.2",
     "autoprefixer": "^7.2.6",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
+    "babel-eslint": "^10.0.2",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^7.1.5",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
+    "babel-preset-react": "^6.24.1",
     "chai": "^3.5.0",
-    "css-loader": "^0.28.11",
+    "css-loader": "^2.1.1",
     "css-selector-tokenizer": "^0.7.1",
-    "duplicate-package-checker-webpack-plugin": "^1.2.6",
-    "enzyme": "^2.4.1",
-    "eslint": "^3.0.1",
-    "eslint-config-airbnb-base": "^4.0.0",
-    "eslint-plugin-import": "^1.10.3",
+    "cssnano": "^4.1.10",
+    "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.3.5",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-react": "^5.2.2",
-    "extract-text-webpack-plugin": "^1.0.1",
     "generate-changelog": "^1.7.1",
-    "growl": "^1.10.5",
+    "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "ignore-styles": "^5.0.1",
-    "istanbul": "1.1.0-alpha.1",
-    "mocha": "^5.2.0",
+    "jest": "^23.6.0",
+    "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
-    "pixrem": "^3.0.2",
-    "postcss-loader": "^1.0.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "postcss-smart-import": "^0.7.6",
-    "react": "^15.6.2",
+    "react": "^16.8.6",
     "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^15.6.2",
+    "react-dom": "^16.8.6",
+    "react-test-renderer": "^16.8.6",
     "sass-lint": "^1.13.1",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.18.2",
-    "webpack": "^1.15.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-dashboard": "^2.1.0",
-    "webpack-dev-server": "^3.7.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "surge": "^0.21.3",
+    "webpack": "^4.38.0",
+    "webpack-bundle-analyzer": "^3.4.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dashboard": "^3.0.7",
+    "webpack-dev-server": "^3.7.2",
+    "webpack-merge": "^4.2.1",
     "webpack-visualizer-plugin": "^0.1.10"
   },
   "peerDependencies": {
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1"
-  }
+    "react": "16.x",
+    "react-dom": "16.x"
+  },
+  "dependencies": {}
 }
