--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,6 @@
 sonar.projectKey=style-skeleton-boilerplate
 # this is the name displayed in the SonarQube UI
 sonar.projectName=style-skeleton-boilerplate
-sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # Since SonarQube 4.2, this property is optional if sonar.modules is set.
@@ -15,8 +14,8 @@ sonar.sources=.
 #
 
 # Exclusions
-sonar.exclusions=dist/**,node_modules/**,coverage/**,example/**,webpack.config*
+sonar.exclusions=dist/**,node_modules/**,coverage/**,example/**,deploy/**,webpack.*,postcss.config.*
 sonar.coverage.exclusions=test/**
 
 # coverage reporting
-sonar.javascript.lcov.reportPath=coverage/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
