--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,15 @@
 {
   "presets": [
-    "react",
-    "env"
+    "@babel/preset-react",
+    "@babel/preset-env"
   ],
   "plugins": [
-    "transform-runtime",
-    "transform-object-rest-spread"
-  ],
+    [
+        "@babel/plugin-transform-runtime",
+        {
+        "corejs": 2
+        }
+    ],
+    "@babel/plugin-proposal-object-rest-spread"
+  ]
 }
