--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "release:major": "npm run prerelease && changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version major",
     "prepare": "npm run dist",
     "postversion": "git push --follow-tags",
-    "deploy": "webpack --config webpack.deploy.js && surge ./deploy/builds/ [nombre componente eg:'roi-tabs'].surge.sh",
+    "deploy": "webpack --config webpack.deploy.js && surge ./deploy/builds/ [nombre componente eg:'style-skeleton-boilerplate'].surge.sh",
     "lint": "eslint . && npm run style-lint",
     "lint:fix": "eslint . --fix",
-    "style-lint": "node_modules/sass-lint/bin/sass-lint.js --config .scss-lint.yml '**/*.scss' --verbose --no-exit"
+    "style-lint": "npx stylelint 'src/**/*.scss' -o styleLintReport.txt",
+    "style-lint:fix": "npx stylelint 'src/**/*.scss' -o styleLintReport.txt --fix"
   },
   "repository": {
     "type": "git",
@@ -76,6 +77,10 @@
     "sass-lint": "^1.13.1",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
+    "stylelint": "^13.7.1",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-scss": "^3.18.0",
     "surge": "^0.21.6",
     "webpack": "^4.44.1",
     "webpack-bundle-analyzer": "^3.8.0",
