feat(example): add BEM lint, add husky to commits, change navigation menu, add main.scss

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,8 +3,14 @@
         "stylelint-config-standard",
         "stylelint-config-recommended-scss"
     ],
+    "plugins": [
+        "stylelint-selector-bem-pattern"
+    ],
     "rules": {
         "number-leading-zero": "never",
-        "indentation": 4
+        "indentation": 4,
+        "plugin/selector-bem-pattern": {
+            "preset": "bem"
+        }
     }
 }
