--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint": "eslint . && npm run style-lint",
     "lint:fix": "eslint . --fix",
     "style-lint": "npx stylelint 'src/**/*.scss' -o styleLintReport.txt",
-    "style-lint:fix": "npx stylelint 'src/**/*.scss' -o styleLintReport.txt --fix"
+    "style-lint:fix": "npx stylelint 'src/**/*.scss' --fix"
   },
   "repository": {
     "type": "git",
@@ -62,6 +62,7 @@
     "eslint-plugin-react": "^7.20.6",
     "generate-changelog": "^1.7.1",
     "html-webpack-plugin": "^4.4.1",
+    "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
     "ignore-styles": "^5.0.1",
     "jest": "^26.4.2",
@@ -81,6 +82,7 @@
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.18.0",
+    "stylelint-selector-bem-pattern": "^2.1.0",
     "surge": "^0.21.6",
     "webpack": "^4.44.1",
     "webpack-bundle-analyzer": "^3.8.0",
@@ -93,5 +95,11 @@
   "dependencies": {
     "react": "16.x",
     "react-dom": "16.x"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "pre-push": "npm run test:ci"
+    }
   }
 }
