--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "clean": "rm -rf dist && mkdir dist",
     "predist": "npm run clean",
     "check-master": "git symbolic-ref --short HEAD | grep ^master$ > /dev/null || (echo \"Not in 'master' branch. Aborting release\"; return 1)",
-    "release:patch": "npm run prerelease && changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version patch",
-    "release:minor": "npm run prerelease && changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version minor",
-    "release:major": "npm run prerelease && changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version major",
+    "changelog": "npm run prerelease && changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md",
+    "release:patch": "npm run changelog && npm version patch",
+    "release:minor": "npm run changelog && npm version minor",
+    "release:major": "npm run changelog && npm version major",
     "prepare": "npm run dist",
     "postversion": "git push --follow-tags",
     "deploy": "webpack --config webpack.deploy.js && surge ./deploy/builds/ [nombre componente eg:'style-skeleton-boilerplate'].surge.sh",
