feat(changelog): fix script to update changelog

--- a/.github/workflows/changelog-master.yml
+++ b/.github/workflows/changelog-master.yml
@@ -16,5 +16,5 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm changelog
+      - run: npm run changelog
 
